--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,32 +10,88 @@
     "preview": "vite preview",
     "lint": "yarn shared:prettierlint && yarn shared:eslint && yarn shared:tslint",
     "lint:fix": "yarn shared:prettierlint:fix && yarn shared:eslint:fix && yarn shared:tslint",
-    "docker:build": "cd $PROJECT_CWD && docker build --target prod-frontend --tag irwright13/softeng-mqp:frontend --platform linux/amd64 .",
-    "docker:upload": "docker push irwright13/softeng-mqp:frontend"
+    "docker:build": "cd $PROJECT_CWD && docker build --target prod-frontend --tag phongthanhcao/softeng-teamc:frontend --platform linux/amd64 .",
+    "docker:upload": "docker push phongthanhcao/softeng-teamc:frontend"
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hookform/resolvers": "^3.3.4",
+    "@iconify/icons-lucide": "^1.2.135",
     "@popperjs/core": "^2.11.8",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-collapsible": "^1.0.3",
+    "@radix-ui/react-context-menu": "^2.1.5",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-hover-card": "^1.0.7",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-menubar": "^1.0.4",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slider": "^1.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-toggle": "^1.0.3",
+    "@radix-ui/react-toggle-group": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-table": "^8.9.3",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.18",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "cmdk": "^1.0.0",
     "common": "workspace:*",
+    "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.0.0",
+    "input-otp": "^1.2.3",
+    "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.363.0",
     "match-sorter": "^6.3.1",
+    "next-themes": "^0.3.0",
     "postcss": "^8.4.35",
+    "queue-typescript": "^1.0.1",
+    "radix-ui": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.2",
+    "react-icons": "^5.0.1",
+    "react-leaflet": "^4.2.1",
+    "react-leaflet-cluster": "^2.1.0",
+    "react-resizable-panels": "^2.0.16",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.11.2",
     "react-zoom-pan-pinch": "^3.1.0",
     "serve": "^14.2.0",
+    "sonner": "^1.4.41",
     "sort-by": "^1.2.0",
-    "tailwindcss": "^3.4.1"
+    "tailwind-merge": "^2.2.2",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.6",
+    "@types/leaflet": "^1",
     "@types/node": "^20.2.5",
     "@types/prop-types": "^15.7.5",
     "@types/react": "^18.0.37",
@@ -45,7 +101,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "database": "workspace:*",
-    "eslint": "latest",
+    "eslint": "^8.57.0",
     "eslint-config-custom": "workspace:*",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
